--- a/app/assets/stylesheets/user_show.css
+++ b/app/assets/stylesheets/user_show.css
@@ -1,9 +1,37 @@
 .personal-bio {
-  border: thin black solid;
+  border: medium black solid;
   width: 50%;
+  padding: 10px;
   float: right;
 }
 
 .personal-content {
-  border: thin red solid;
+  border: medium black solid;
+  display: grid;
+  margin-top: 10px;
+  grid-template-columns: 30% 65%;
+}
+
+.personal-content span{
+  grid-column: 1;
+}
+
+.personal-content span a {
+  display: inline-block;
+  border: medium black solid;
+  margin-left: 5px;
+  margin-top: 5px;
+  color: black;
+  text-decoration: none;
+  font-size: 1.3em;
+}
+
+.personal-content p {
+  grid-column: 2;
+}
+
+.bio-img {
+  border-radius: 150px;
+  width: 250px;
+  height: 250px;
 }
