--- a/app/assets/stylesheets/login_bar.css
+++ b/app/assets/stylesheets/login_bar.css
@@ -1,15 +1,21 @@
 .login-nav{
-  height: 100px;
-  border: thin black solid;
+  height: 50px;
+  border: medium black solid;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .login-nav ul {
-  border: thin green solid;
   grid-column: 4;
   align-items: center;
   display: grid;
   grid-template-columns: 1fr 1fr;
   list-style: none;
+}
+
+.login-nav li {
+  text-align: center;
+  display: inline-block;
+  width: 70%;
+  border: medium black solid;
 }
