added additional css for grid system, removed logic from show view and added interpolation instead, altered the controller for seasons

--- a/app/assets/stylesheets/seasons_show.css
+++ b/app/assets/stylesheets/seasons_show.css
@@ -24,3 +24,12 @@
   background-color: Gray;
 }
 /* END Season Winter */
+
+.seasons-show-produce {
+  display: grid;
+  grid-template-columns: repeat(1fr);
+  grid-template-areas:
+  "header  header  header"
+  "left middle right"
+  "footer  footer  footer";
+}
