--- a/app/views/seasons/index.html.erb
+++ b/app/views/seasons/index.html.erb
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="seasons-main">
   <nav class="seasons">
     <ul>
-      <li><a href="#">Spring</a></li>
-      <li><a href="#">Summer</a></li>
-      <li><a href="#">Fall</a></li>
-      <li><a href="#">Winter</a></li>
+      <li><a href="/seasons/spring">Spring</a></li>
+      <li><a href="/seasons/summer">Summer</a></li>
+      <li><a href="/seasons/fall">Fall</a></li>
+      <li><a href="/seasons/winter">Winter</a></li>
     </ul>
   </nav>
   <main class="home-page">
