--- a/app/views/shared/_login_bar.html.erb
+++ b/app/views/shared/_login_bar.html.erb
@@ -1,10 +1,10 @@
 <nav class="login-nav">
   <ul>
     <% unless session[:user_id] %>
-      <li>Login</li>
-      <li>Register</li>
+      <li><%= link_to "login", login_path %></li>
+      <li> <%= link_to "register", new_user_path %> </li>
     <% else %>
-      <li>Logout</li>
+      <li> <%= button_to "logout", { action: destroy } %> </li>
     <% end %>
   </ul>
 </nav>
