--- a/app/views/shared/_login_bar.html.erb
+++ b/app/views/shared/_login_bar.html.erb
@@ -2,9 +2,9 @@
   <ul>
     <% unless session[:user_id] %>
       <li><%= link_to "login", login_path %></li>
-      <li> <%= link_to "register", new_user_path %> </li>
+      <li> <%= link_to "register", root_path %> </li>
     <% else %>
-      <li> <%= button_to "logout", { action: destroy } %> </li>
+      <li> <%= button_to "logout", { action: 'destroy', controller: 'sessions' }, method: :delete %></li>
     <% end %>
   </ul>
 </nav>
