added css to show page, altered placeholder image size and text on partial

--- a/app/assets/stylesheets/seasons_show.css
+++ b/app/assets/stylesheets/seasons_show.css
@@ -1,6 +1,7 @@
 /* START Season Spring */
 .seasons-show-Spring {
   background-color: Yellow;
+  text-align: center;
 }
 /* END Season Spring */
 
@@ -8,6 +9,7 @@
 /* START Season Summer */
 .seasons-show-Summer {
   background-color: Red;
+  text-align: center;
 }
 /* END Season Summer */
 
@@ -15,6 +17,7 @@
 /* START Season Fall */
 .seasons-show-Fall {
   background-color: Orange;
+  text-align: center;
 }
 /* END Season Fall */
 
@@ -22,6 +25,7 @@
 /* START Season Winter */
 .seasons-show-Winter {
   background-color: Gray;
+  text-align: center;
 }
 /* END Season Winter */
 
