--- a/app/views/seasons/_season_ingredient.html.erb
+++ b/app/views/seasons/_season_ingredient.html.erb
@@ -3,7 +3,7 @@
   <main>
 
     <div class="season-ingredient-partial-cell">
-      <p><%= ingredient.name %></p>
+      <a href="https://placeholder.com"><img src="http://via.placeholder.com/125x125"><%= ingredient.name %></a>
     </div>
 
   </main>
