--- a/app/views/seasons/show.html.erb
+++ b/app/views/seasons/show.html.erb
@@ -1,16 +1,19 @@
-<section class="seasons-show-<%= @season.name %>">
-  <div class="current-season-spring">
-    </div>
-    <div class="seasons-show-header">
-      <h3>Sautee Seattle - Seasonal Produce</h3>
-      <h1><%= @season.name %></h1>
-      <h4>This Seasons Produce!</h4>
-    </div>
+<main>
 
-    <div class="season-ingredient-partial-grid">
-      <% @season.ingredients.each do |ingredient| %>
-        <%= render partial: "season_ingredient", locals: {ingredient: ingredient} %>
-      <% end %>
-    </div>
-  </div>
-</section>
+    <section class="seasons-show-<%= @season.name %>">
+
+        <div class="seasons-show-header">
+          <h3>Sautee Seattle - Seasonal Produce</h3>
+          <h1><%= @season.name %></h1>
+          <h4>This Seasons Produce!</h4>
+        </div>
+
+        <div class="season-ingredient-partial-grid">
+          <% @season.ingredients.each do |ingredient| %>
+            <%= render partial: "season_ingredient", locals: {ingredient: ingredient} %>
+          <% end %>
+        </div>
+
+    </section>
+
+</main>
