Added media query to move logo

--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -9,10 +9,22 @@
     <div class="recipes">
       <h3>Recipes</h3>
       <ul>
-        <li>Turtle Garlic Soup</li>
-        <li>Little Garlic Stir Fry</li>
-        <li>Little Garlic Stir Fry</li>
-        <li>Little Garlic Stir Fry</li>
+        <li>
+          <h4>Turtle Garlic Soup</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur...</p>
+        </li>
+        <li>
+          <h4>Little Garlic Stir Fry</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur...</p>
+        </li>
+        <li>
+          <h4>Little Garlic Stir Fry</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur...</p>
+        </li>
+        <li>
+          <h4>Little Garlic Stir Fry</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur...</p>
+        </li>
       </ul>
     </div>
   </article>
