--- a/app/assets/stylesheets/ingredients_show.css
+++ b/app/assets/stylesheets/ingredients_show.css
@@ -1,11 +1,13 @@
 .logo {
   border-radius: 150px;
+  position: absolute;
   margin-top: 20px;
   margin-left: 20px;
 }
 
 #ingredient-show ul {
   list-style: none;
+  margin-top: 10px;
 }
 
 #ingredient-show li {
@@ -15,6 +17,12 @@
 #ingredient-show .locations {
   border: medium black solid;
   width: 50%;
-  padding-left: 10px;
-  padding-top: 10px;
+  padding: 10px 0px 10px 10px;
+  margin-top: 50px;
+}
+
+@media (max-width: 1123px) {
+  .logo {
+    position: relative;
+  }
 }
