--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,4 +1,4 @@
-<img class="logo" src="http://via.placeholder.com/250x150" alt="">
+<img class="ingredient-show-logo" src="http://via.placeholder.com/250x150" alt="">
 
 <section id="ingredient-show">
   <article class="left-content">
@@ -10,19 +10,19 @@
       <h3>Recipes</h3>
       <ul>
         <li>
-          <h4>Turtle Garlic Soup</h4>
+          <h5>Turtle Garlic Soup</h5>
           <p>Lorem ipsum dolor sit amet, consectetur...</p>
         </li>
         <li>
-          <h4>Little Garlic Stir Fry</h4>
+          <h5>Little Garlic Stir Fry</h5>
           <p>Lorem ipsum dolor sit amet, consectetur...</p>
         </li>
         <li>
-          <h4>Little Garlic Stir Fry</h4>
+          <h5>Little Garlic Stir Fry</h5>
           <p>Lorem ipsum dolor sit amet, consectetur...</p>
         </li>
         <li>
-          <h4>Little Garlic Stir Fry</h4>
+          <h5>Little Garlic Stir Fry</h5>
           <p>Lorem ipsum dolor sit amet, consectetur...</p>
         </li>
       </ul>
