--- a/app/assets/stylesheets/ingredients_show.css
+++ b/app/assets/stylesheets/ingredients_show.css
@@ -14,6 +14,10 @@
   margin-left: 0px;
 }
 
+#ingredient-show .right-content > * {
+  float: right;
+}
+
 #ingredient-show .recipes {
   margin-top: 50px;
 }
@@ -40,5 +44,9 @@
 
   #ingredient-show .right-content {
     width: 100%;
+  }
+
+  #ingredient-show .right-content > * {
+    float: left;
   }
 }
