--- a/app/assets/stylesheets/ingredients_show.css
+++ b/app/assets/stylesheets/ingredients_show.css
@@ -1,10 +1,3 @@
-.ingredient-show-logo {
-  border-radius: 150px;
-  position: absolute;
-  margin-top: 20px;
-  margin-left: 20px;
-}
-
 #ingredient-show ul {
   list-style: none;
   margin-top: 10px;
@@ -14,39 +7,20 @@
   margin-left: 0px;
 }
 
-#ingredient-show .right-content > * {
-  float: right;
-}
-
-#ingredient-show .recipes {
-  margin-top: 50px;
-}
-
-#ingredient-show .recipes p {
+#ingredient-show li p {
   margin-top: 0px;
 }
 
 #ingredient-show .locations {
   border: medium black solid;
-  width: 60%;
-  padding: 10px 0px 10px 10px;
-  margin-top: 50px;
 }
 
-@media (max-width: 1123px) {
-  .ingredient-show-logo {
-    position: relative;
-  }
+#ingredient-show .recipes {
+  margin-top: 70px;
+}
 
-  #ingredient-show .left-content {
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  #ingredient-show .left-content, #ingredient-show .right-content {
     width: 100%;
-  }
-
-  #ingredient-show .right-content {
-    width: 100%;
-  }
-
-  #ingredient-show .right-content > * {
-    float: left;
   }
 }
