altered routes to season show pages to be correct

--- a/app/views/shared/_login_bar.html.erb
+++ b/app/views/shared/_login_bar.html.erb
@@ -2,10 +2,10 @@
   <h1><a href="/">Seattle <span>Sautee</span></a></h1>
   <nav class="seasons">
     <ul>
-      <li><a href="/seasons/spring">Spring</a></li>
-      <li><a href="/seasons/summer">Summer</a></li>
-      <li><a href="/seasons/fall">Fall</a></li>
-      <li><a href="/seasons/winter">Winter</a></li>
+      <li><a href="/seasons/Spring">Spring</a></li>
+      <li><a href="/seasons/Summer">Summer</a></li>
+      <li><a href="/seasons/Fall">Fall</a></li>
+      <li><a href="/seasons/Winter">Winter</a></li>
     </ul>
   </nav>
   <nav class="login-nav">
