--- a/app/views/seasons/_season_ingredient.html.erb
+++ b/app/views/seasons/_season_ingredient.html.erb
@@ -1,7 +1,5 @@
-  <main>
+  <li class="season-ingredient-partial-cell">
 
-    <div class="season-ingredient-partial-cell">
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/125x125"><%= ingredient.name %></a>
-    </div>
+      <a href="https://placeholder.com"><img src="http://via.placeholder.com/125x125"></a>
 
-  </main>
+  </li>
