--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -3,8 +3,8 @@
     <img src="http://via.placeholder.com/250x200" alt="">
 
     <div class="produce-info">
-      <h2>Garlic</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2><%= @ingredient.name %></h2>
+      <p><%= @ingredient.description %></p>
     </div>
   </article>
 
@@ -12,32 +12,21 @@
     <aside class="locations">
       <h3>Where You Find It:</h3>
       <ul>
-        <li>Here</li>
-        <li>There</li>
-        <li>Anywhere</li>
-        <li>Nowhere</li>
+        <% @locations.each do |location| %>
+          <li><%= location.title %></li>
+        <% end %>
       </ul>
     </aside>
 
     <div class="recipes">
       <h3>Recipes</h3>
       <ul>
-        <li>
-          <h5>Turtle Garlic Soup</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur...</p>
-        </li>
-        <li>
-          <h5>Little Garlic Stir Fry</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur...</p>
-        </li>
-        <li>
-          <h5>Little Garlic Stir Fry</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur...</p>
-        </li>
-        <li>
-          <h5>Little Garlic Stir Fry</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur...</p>
-        </li>
+        <% @recipes.each do |recipe| %>
+          <li>
+            <h5><%= recipe.title %></h5>
+            <p><%= recipe.body[0..20] %>...</p>
+          </li>
+        <% end %>
       </ul>
     </div>
   </article>
