Added recipes and locations instance attributes to ingredient

--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -12,7 +12,7 @@
     <aside class="locations">
       <h3>Where You Find It:</h3>
       <ul>
-        <% @locations.each do |location| %>
+        <% @ingredient.locations.each do |location| %>
           <li><%= location.title %></li>
         <% end %>
       </ul>
@@ -21,7 +21,7 @@
     <div class="recipes">
       <h3>Recipes</h3>
       <ul>
-        <% @recipes.each do |recipe| %>
+        <% @ingredient.recipes.each do |recipe| %>
           <li>
             <h5><%= recipe.title %></h5>
             <p><%= recipe.body[0..20] %>...</p>
