--- a/app/views/seasons/_season_ingredient.html.erb
+++ b/app/views/seasons/_season_ingredient.html.erb
@@ -1,5 +1,5 @@
   <li class="season-ingredient-partial-cell">
-
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/125x125"></a>
-
+    <%= link_to ingredient_path(ingredient) do %>
+      <img src="http://via.placeholder.com/125x125" />
+    <% end %>
   </li>
