--- a/app/assets/stylesheets/ingredients_show.css
+++ b/app/assets/stylesheets/ingredients_show.css
@@ -15,6 +15,14 @@
   border: medium black solid;
 }
 
+#ingredient-show .produce-info h2 {
+  margin-bottom: 0px;
+}
+
+#ingredient-show .produce-info p {
+  margin-top: 0px;
+}
+
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   #ingredient-show .left-content, #ingredient-show .right-content {
     width: 100%;
