--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -6,6 +6,7 @@
 
     <aside class="right-content produce-info">
       <h2><%= @ingredient.name %></h2>
+      <h6><%= @seasons_string %></h6>
       <p><%= @ingredient.description %></p>
     </aside>
 
