--- a/app/assets/stylesheets/seasons_show.css
+++ b/app/assets/stylesheets/seasons_show.css
@@ -30,19 +30,25 @@
 /* END Season Winter */
 
 
+/* START Show Seasons */
+.seasons-show-header p {
+  padding: 0em 1.25em;
+}
+
+.seasons-show-header h2 {
+  text-align: left;
+  padding-left: 0.8em;
+}
+
+/* END Show Seasons */
+
+
 /* START Partial _Season_Ingredient */
 .season-ingredient-partial-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 25px;
-  border: 3px solid green;
   list-style-type: none;
+  text-align: left;
 }
 
 .season-ingredient-partial-cell {
-  margin: 0;
-  text-align: center;
-  vertical-align: middle;
-  border: 3px solid blue;
 }
 /* END Partial _Season_Ingredient */
