--- a/app/views/seasons/_season_ingredient.html.erb
+++ b/app/views/seasons/_season_ingredient.html.erb
@@ -1,5 +1,3 @@
   <li class="season-ingredient-partial-cell">
-
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/125x125"></a>
-
+    <a href="#"><%= ingredient.name %></a>
   </li>
