Added 'profile' button to nav bar

--- a/app/views/shared/_login_bar.html.erb
+++ b/app/views/shared/_login_bar.html.erb
@@ -14,7 +14,8 @@
       <li><%= link_to "login", login_path %></li>
       <li><%= link_to "register", new_user_path %></li>
       <% else %>
-      <li><%= button_to "logout", { action: 'destroy', controller: 'sessions' }, method: :delete %></li>
+        <li><%= button_to "logout", { action: 'destroy', controller: 'sessions' }, method: :delete %></li>
+        <li><%= link_to "See Profile", user_path(User.find(session[:user_id])) %></li>
       <% end %>
     </ul>
   </nav>
