Added styling to see profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,8 @@
       </p>
     </aside>
   </article>
-  <article class="">
+  
+  <article class="bottom">
     <aside class="left-content">
       <h2>Recently Posted Locations</h2>
       <ul>
