--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -1,5 +1,9 @@
-#user-profile .bottom .left-content {
-  ul {
+#user-profile {
+  .top img {
+    border-radius: 50%;
+  }
+
+  .bottom .left-content ul{
     list-style: none;
     li {
       margin-left: 0px;
