--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,5 +1,5 @@
 <section id="ingredient-show">
-  <article class="">
+  <article class="top">
     <aside class="left-content">
       <img src="http://via.placeholder.com/250x200" alt="">
     </aside>
@@ -12,7 +12,7 @@
 
   </article>
 
-  <article class="">
+  <article class="bottom">
     <aside class="left-content produce-info recipes">
       <h3>Recipes</h3>
       <ul>
