altered Link_to to include ingredient name

--- a/app/views/seasons/_season_ingredient.html.erb
+++ b/app/views/seasons/_season_ingredient.html.erb
@@ -1,4 +1,6 @@
   <li class="season-ingredient-partial-cell">
+
     <%= link_to ingredient_path(ingredient) do %>
+      <%= ingredient.name %>
     <% end %>
   </li>
