--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,19 +1,28 @@
 <section id="ingredient-show">
   <article class="top">
     <aside class="left-content">
-      <img src="http://via.placeholder.com/250x200" alt="">
+      <img src="http://via.placeholder.com/250x250" alt="">
     </aside>
 
-    <aside class="right-content produce-info">
-      <h2><%= @ingredient.name %></h2>
-      <h6><%= @seasons_string %></h6>
-      <p><%= @ingredient.description %></p>
+    <aside class="right-content locations">
+      <h3>Locations</h3>
+      <ul>
+        <% @ingredient.locations.each do |location| %>
+          <li><%= location.title %></li>
+        <% end %>
+      </ul>
     </aside>
 
   </article>
 
   <article class="bottom">
-    <aside class="left-content produce-info recipes">
+    <aside class="left-content produce-info">
+      <h2><%= @ingredient.name %></h2>
+      <h6><%= @seasons_string %></h6>
+      <p><%= @ingredient.description %></p>
+    </aside>
+
+    <aside class="right-content recipes">
       <h3>Recipes</h3>
       <ul>
         <% @ingredient.recipes.each do |recipe| %>
@@ -21,15 +30,6 @@
             <h5><%= recipe.title %></h5>
             <p><%= recipe.body[0..20] %>...</p>
           </li>
-        <% end %>
-      </ul>
-    </aside>
-
-    <aside class="right-content locations">
-      <h3>Where You Find It:</h3>
-      <ul>
-        <% @ingredient.locations.each do |location| %>
-          <li><%= location.title %></li>
         <% end %>
       </ul>
     </aside>
