--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -11,14 +11,16 @@
           <li><%= location.title %></li>
         <% end %>
       </ul>
+      <span class="see-more">
+        <%= link_to "See More", "#" %>
+      </span>
     </aside>
-
   </article>
 
   <article class="bottom">
     <aside class="left-content produce-info">
       <h2><%= @ingredient.name %></h2>
-      <h6><%= @seasons_string %></h6>
+      <h6>Best Seasons -> <%= @seasons_string %></h6>
       <p><%= @ingredient.description %></p>
     </aside>
 
@@ -32,6 +34,9 @@
           </li>
         <% end %>
       </ul>
+      <span class="see-more">
+        <%= link_to "See More", "#" %>
+      </span>
     </aside>
   </article>
 </section>
