--- a/app/assets/stylesheets/ingredients_show.scss
+++ b/app/assets/stylesheets/ingredients_show.scss
@@ -1,9 +1,7 @@
 #ingredient-show {
   ul {
-    list-style: none;
     margin-top: 10px;
     li {
-      margin-left: 0px;
       p {
         margin-top: 0px;
       }
@@ -13,10 +11,13 @@
   .top {
     .left-content img {
       border-radius: 50%;
+      border: 5px black solid;
     }
   }
 
   .see-more {
+    margin-top: 10px;
+    display: inline-block;
     a {
       color: black;
       text-decoration: none;
@@ -27,10 +28,6 @@
   .produce-info {
     h2 {
       margin-bottom: 0px;
-    }
-
-    p {
-      margin-top: 0px;
     }
   }
 }
