--- a/app/views/posts/new_location.html.erb
+++ b/app/views/posts/new_location.html.erb
@@ -1,3 +1,18 @@
 <section id="location-new">
-  <h1>I Will be a New Location Form!</h1>
+  <article class="left-content">
+    <%= form_for :post do |f| %>
+      <%= f.hidden_field :post_type, value: 'location' %>
+      <div>
+        <label>Location Name:</label>
+        <%= f.text_field :title %>
+      </div>
+      <div>
+        <label>Address:</label>
+        <%= f.text_field :body %>
+      </div>
+      <div>
+        <%= f.submit "Submit" %>
+      </div>
+    <% end %>
+  </article>
 </section>
