--- a/app/assets/stylesheets/ingredients_show.scss
+++ b/app/assets/stylesheets/ingredients_show.scss
@@ -1,38 +1,42 @@
 #ingredient-show {
   ul {
-    list-style: none;
     margin-top: 10px;
     li {
-      margin-left: 0px;
       p {
         margin-top: 0px;
       }
     }
   }
 
-  .left-content img {
-    border-radius: 50%;
+  .top {
+    .left-content img {
+      border-radius: 50%;
+      border: 5px black solid;
+    }
   }
 
-  .locations {
+  .bottom .contribute span {
+    display: block;
+    text-align: center;
     border: medium black solid;
+    margin-bottom: 10px;
+  }
+
+  a {
+    color: black;
+    text-decoration: none;
+    padding: 2px;
+  }
+
+  .see-more {
+    margin-top: 10px;
+    display: inline-block;
   }
 
   .produce-info {
     h2 {
       margin-bottom: 0px;
     }
-
-    p {
-      margin-top: 0px;
-    }
-  }
-
-  .new-location-button {
-    background: url('plus.svg');
-    height: 50px;
-    width: 50px;
-    float: right;
   }
 }
 
