--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,26 +1,43 @@
 <section id="ingredient-show">
   <article class="top">
     <aside class="left-content">
-      <img src="http://via.placeholder.com/250x200" alt="">
+      <img src="http://via.placeholder.com/250x250" alt="">
     </aside>
 
-    <aside class="right-content produce-info">
-      <h2><%= @ingredient.name %></h2>
-      <h6><%= @seasons_string %></h6>
-      <p><%= @ingredient.description %></p>
-    </aside>
-  </article>
-
-  <article class="bottom">
-    <aside class="left-content produce-info locations">
-      <h3>Where You Find It:</h3>
+    <aside class="right-content locations">
+      <h3>Locations</h3>
       <ul>
         <% @ingredient.locations.each do |location| %>
           <li><%= location.title %></li>
         <% end %>
       </ul>
-      <%= link_to location_new_ingredient_post_path(@ingredient) do %>
-        <div class="new-location-button"></div>
+      <span class="see-more">
+        <%= link_to "More places to go...", "#" %>
+      </span>
+    </aside>
+  </article>
+
+  <article class="bottom">
+    <aside class="left-content">
+      <aside class="produce-info">
+        <h2><%= @ingredient.name %></h2>
+        <h6>Best Seasons -> <%= @seasons_string %></h6>
+        <p><%= @ingredient.description %></p>
+      </aside>
+      <% if session[:user_id] %>
+        <aside class="contribute">
+          <h2>Get Involved...</h2>
+          <p>
+            Feel free to share a recipe or a
+            location to buy <%= @ingredient.name.pluralize(2).downcase %>.
+          </p>
+          <span>
+            <%= link_to "Add a Location", "#" %>
+          </span>
+          <span>
+            <%= link_to "Share Recipe", "#" %>
+          </span>
+        </aside>
       <% end %>
     </aside>
 
@@ -29,11 +46,13 @@
       <ul>
         <% @ingredient.recipes.each do |recipe| %>
           <li>
-            <h5><%= recipe.title %></h5>
-            <p><%= recipe.body[0..20] %>...</p>
+            <h4><%= recipe.title %></h4>
           </li>
         <% end %>
       </ul>
+      <span class="see-more">
+        <%= link_to "More recipes...", "#" %>
+      </span>
     </aside>
   </article>
 </section>
