--- a/app/assets/stylesheets/location_new.scss
+++ b/app/assets/stylesheets/location_new.scss
@@ -1,17 +1,15 @@
-#location-new {
-  .left-content {
-    input[type='text'] {
-      width: 100%;
-      height: 20px;
-      border: medium black solid;
-      border-radius: 5px
-    }
+#location-new .left-content {
+  input[type='text'] {
+    width: 100%;
+    height: 20px;
+    border: medium black solid;
+    border-radius: 5px
+  }
 
-    textarea {
-      height: 50px;
-      width: 100%;
-      border: medium black solid;
-      border-radius: 5px
-    }
+  textarea {
+    height: 50px;
+    width: 100%;
+    border: medium black solid;
+    border-radius: 5px
   }
 }
