Display errors if post is invalid

--- a/app/views/posts/new_location.html.erb
+++ b/app/views/posts/new_location.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/errors' %>
+
 <section id="location-new">
   <article class="left-content">
     <%= form_for :post, url: ingredient_posts_path(@ingredient) do |f| %>
