--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -22,7 +22,7 @@
       <aside class="produce-info">
         <h2><%= @ingredient.name %></h2>
         <h6>Best Seasons -> <%= @seasons_string %></h6>
-        <p><%= @ingredient.description %></p>
+        <p><%= @description %></p>
       </aside>
       <% if session[:user_id] %>
         <aside class="contribute">
