Started adding content to ingredients/recipe index, linked to ingredient#show

--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -51,7 +51,7 @@
         <% end %>
       </ul>
       <span class="see-more">
-        <%= link_to "More recipes...", "#" %>
+        <%= link_to "More recipes...", ingredient_posts_path(@ingredient) %>
       </span>
     </aside>
   </article>
