--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,4 +3,20 @@
   <p>
     <%= @description %>
   </p>
+  <aside class="recipe-list">
+    <h3>Ch ch check it out!</h3>
+    <div class="separator"></div>
+    <ul>
+      <li>Mama's Apples</li>
+      <li>Papa's Apples</li>
+      <li>Blaine's Apples</li>
+      <li>Marlo's Apples</li>
+      <li>Taylor's Apples</li>
+      <% @ingredient.recipes.each do |recipe| %>
+        <li>
+          <%= link_to recipe.title, "#" %>
+        </li>
+      <% end %>
+    </ul>
+  </aside>
 </section>
