Added invisible border around lis

--- a/app/assets/stylesheets/recipes_posts_index.scss
+++ b/app/assets/stylesheets/recipes_posts_index.scss
@@ -6,9 +6,11 @@
       list-style: none;
       li {
         margin-left: 0px;
+        border: medium white solid;
 
         &:hover {
           border: medium green solid;
+          color: green;
         }
       }
     }
