--- a/app/assets/stylesheets/location_new.scss
+++ b/app/assets/stylesheets/location_new.scss
@@ -1,15 +1,15 @@
 #location-new {
-  input[type='text'] {
-    width: 100%;
-    height: 20px;
-    border: medium black solid;
-    border-radius: 5px
-  }
+  #container {
+    width: 60%;
+    margin: auto;
 
-  textarea {
-    height: 50px;
-    width: 100%;
-    border: medium black solid;
-    border-radius: 5px
+    input[type='text'] {
+      width: 100%;
+      height: 30px;
+    }
+
+    input[type='submit'] {
+      width: 100%;
+    }
   }
 }
