--- a/app/views/posts/new_location.html.erb
+++ b/app/views/posts/new_location.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/errors' %>
 
 <section id="location-new">
-  <article>
+  <article id="container">
     <h1>Share Location</h1>
     <%= form_for :post, url: ingredient_posts_path(@ingredient) do |f| %>
       <%= f.hidden_field :post_type, value: 'location' %>
