added seed for posts and locations, added interpolation for index page, added params for index route

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,6 +1,7 @@
 <section>
 
-  <div class="">
+  <div class="locations-index-all-locations">
+    <%= @ingredient.locations %>
     <p>This is the place!!!</p>
   </div>
 
