adds outline for recipe show page

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,1 +1,13 @@
-Hello
+<section>
+  <article class="left-content">
+
+  </article>
+
+  <article class="right-content">
+
+
+    <aside id="recipe-image" class="round-image">
+
+    </aside>
+  </article>
+</section>
