--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,5 +1,6 @@
 <section>
 
+  <h1>More places to go...</h1>
   <% @ingredient.locations.each do |location| %>
   <div class="locations-index-all-locations">
       <h3><a href="#"><%= location.title %></a></h3>
