--- a/app/assets/stylesheets/ingredients_show.scss
+++ b/app/assets/stylesheets/ingredients_show.scss
@@ -8,10 +8,20 @@
     }
   }
 
+  h2 {
+    font-size: 1.5em;
+  }
+
+  a {
+    color: white;
+    text-decoration: none;
+    padding: 2px;
+  }
+
   .top {
     .left-content img {
       border-radius: 50%;
-      border: 5px black solid;
+      border: 10px white solid;
     }
   }
 
@@ -22,20 +32,16 @@
     margin-bottom: 10px;
   }
 
-  a {
-    color: black;
-    text-decoration: none;
-    padding: 2px;
-  }
-
   .see-more {
     margin-top: 10px;
     display: inline-block;
   }
 
   .produce-info {
-    h2 {
+    h1 {
       margin-bottom: 0px;
+      margin-top: 30px;
+      font-size: 2em;
     }
   }
 }
