Better border on image

--- a/app/assets/stylesheets/ingredients_show.scss
+++ b/app/assets/stylesheets/ingredients_show.scss
@@ -21,7 +21,8 @@
   .top {
     .left-content img {
       border-radius: 50%;
-      border: 10px white solid;
+      border: 5px white solid;
+      padding: 1px;
     }
   }
 
