--- a/app/assets/stylesheets/ingredients_show.scss
+++ b/app/assets/stylesheets/ingredients_show.scss
@@ -29,7 +29,7 @@
   .bottom .contribute span {
     display: block;
     text-align: center;
-    border: medium black solid;
+    border: medium white solid;
     margin-bottom: 10px;
   }
 
@@ -40,7 +40,6 @@
 
   .produce-info {
     h1 {
-      margin-bottom: 0px;
       margin-top: 30px;
       font-size: 2em;
     }
