re-adds recipe link on user-profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
       </p>
     </aside>
   </article>
-  
+
   <article class="bottom">
     <aside class="left-content">
       <h2>Recently Posted Locations</h2>
@@ -25,7 +25,7 @@
       <h2>Recently Posted Recipes</h2>
       <ul>
         <% @user.recipes[0..5].each do |recipe| %>
-          <li><%= recipe.title %></li>
+          <li><%= link_to recipe.title, user_recipe_path(recipe.user, recipe) %></li>
         <% end %>
       </ul>
     </aside>
