adds styling to round images

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -21,8 +21,8 @@
       <% end %>
     </p>
 
-    <aside id="recipe-image" class="round-image">
-      <img src="<%= @recipe.url %>" alt="recipe image">
+    <aside>
+      <img class="round-image" src="<%= @recipe.url %>" alt="recipe image">
     </aside>
   </article>
 </section>
