--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,7 +1,7 @@
 <section id="ingredient-show">
   <article class="top">
     <aside class="left-content">
-      <img src="http://via.placeholder.com/250x250" alt="">
+      <img class="round-image" src="http://via.placeholder.com/250x250" alt="">
     </aside>
 
     <aside class="right-content locations">
