--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <section id="user-profile">
   <article class="top">
     <aside class="left-content">
-      <img src="http://via.placeholder.com/250x250" alt="personal-bio" class="bio-img">
+      <img src="http://via.placeholder.com/250x250" alt="personal-bio" class="bio-img round-image">
     </aside>
 
     <aside class="right-content">
